# deepdoc_parser

./: pyproject.toml  readme.md  requirements.txt  run_parser.py  test_parser.py
file/: demo.txt
parser/: __init__.py  nlp_utils.py  txt_parser.py  utils.py
src/: run_parser.py
src/nlp/: nlp_utils.py  rag_tokenizer.py
src/parser/: __init__.py  docx_parser.py  excel_parser.py  figure_parser.py  html_parser.py  markdown_parser.py  pdf_parser.py  ppt_parser.py  txt_parser.py  utils.py
src/parser/resume/: step_one.py  step_two.py
src/parser/resume/entities/: corporations.py  schools.py
