[project]
name = "deepdoc-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "chardet==5.2.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "python-docx==1.1.2",
    "requests==2.32.3",
    "ruff==0.11.6",
    "tiktoken==0.9.0",
]
