[project]
name = "deepdoc-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "chardet==5.2.0",
    "datrie>=0.8.2",
    "hanziconv>=0.3.2",
    "loguru>=0.7.3",
    "nltk>=3.9.1",
    "numpy==1.26.4",
    "openpyxl>=3.1.5",
    "pandas==2.2.3",
    "python-docx==1.1.2",
    "requests==2.32.3",
    "ruff==0.11.6",
    "tiktoken==0.9.0",
]
